--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -41,4 +41,4 @@
 .form
   %textbox type a message
   %i.fa.fa-picture-o.icon
-  %input.form__submit{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/ 
+  %input.form__submit{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/
