--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,187 +1,128 @@
-// Place all the styles related to the messages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-.side-content {
-  width: 300px;
-  height: 100vh;
-  background-color: $navy;
-  float: left;
+body{
+  width: 100%;
+  height:100%;
+  display: block;
+}
+// お知らせバー
+.notification {
+  background: #38AEF0;
+  width:100%;
+  margin:0;
+  padding:0;
+  display: block;
 
-
-  &__header {
-    padding:  0 20px;
-    height: 100px;
-    background-color: $dark-navy;
-
-    h5 {
-      color: $letter-white;
-      font-size: 16px;
-      font-weight: bold;
-      line-height: 100px;
-      letter-spacing: 2px;
-      float: left;
-    }
-
-    &__icon {
-
-      i {
-        color: $letter-white;
-        font-size: 20px;
-        line-height: 100px;
-        letter-spacing: 6px;
-        float: right;
-      }
-
-    }
-  }
-
-  &__group-contents {
-
-    &--list {
-      padding: 20px 20px 40px;
-      height: 31px;
-      background-color: $navy;
-
-        a {
-          color: $letter-white;
-          text-decoration: none;
-          font-size: 13px;
-          padding-bottom: 5px;
-        }
-    }
+  .notice {
+  color:#FFFFFF;
+  text-align: center;
   }
 }
 
+// 左側メニューバー
+.side-bar {
+  color:#FFFFFF;
+  width:300px;
+  box-sizing: border-box;
+  float:left;
+  display: block;
 
-.main-content {
-  width: calc(100vw - 300px);
-  height: 100vh;
-  background-color: $white-smoke;
-  float: right;
+  header {
+      background: #253141;
+      height:100px;
+      line-height:100px;
+      display: block;
+      padding: 0 20px;
+}
+  h3.user_name {
+    font-size: 16px;
+    font-weight: bold;
+    ådisplay: inline-block;
+  }
+  ul {
+    list-style: none;
+  }
+  li {
+    text-align: -webkit-match-parent;
+  }
+  // .header_icons {
+  //  display: inline-block;
+  //  float:right;
+  //  cursor: pointer;
+  //  display: flex;
+  // }
 
-  &__header {
-    padding: 0px 40px;
+  .groups {
+    background: #2f3e51;
+    height:calc(100vh-100px);
+    padding:0 20px;
+  }
+  .group_name {
+    font-size: 15px;
+      p{
+      font-size: 11px;
+    }
+  }
+
+// 右側表示欄
+.chat {
+  width: calc( 100vw - 300px);
+  float:right;
+    padding: 0 40px;
+
+  header {
+    box-sizing: border-box;
+      height: 100px;
+    p {
+      // font-weight: 35px;
+      font-size: 20px;
+      color:#333333;
+    }
+  }
+}
+// chat欄ボーダー
+.border {
+  color: #eeeeee;
+}
+// chat欄各メッセージ間隔
+.chat.messages {
+  box-sizing: border-box;
     height: 100px;
-    background-color: white;
+    padding: 0 40px;
+}
+// chat欄ユーザー表示
+.user__name {
+  font-size:16px;
+  font-weight: bold;
+  color:#434A54;
+}
 
-    &__name {
-      float: left;
-      h2 {
-        padding: 30px 0 10px;
-        font-size: 20px;
-        letter-spacing: 2px;
-        color: $main-group-black;
-      }
+// chat欄コメント表示
+.user__comment {
+  font-size: 14px;
+}
 
-      p {
-        padding-bottom: 15px;
-        font-size: 12px;
-        color: $leter-lightgray;
-        float: left;
-      }
+// chat欄タイムスタンプ
+.timestmp{
+  font-size: 12px;
+  color:#999999;
+}
 
-      span {
-        padding-bottom: 15px;
-        font-size: 12px;
-        color: $leter-lightgray;
-        float: right;
-        margin-left: 5px;
-      }
+    .edit__submit {
+      color: #38AEF0;
+      background: #FFFFFF;
+      height:40px;
     }
 
-    &__edit-btn {
-        float: right;
-        display: inline-block;
-        margin: 28px 0;
-        padding: 0 20px;
-        line-height: 40px;
-        color: $light_blue;
-        font-size: 14px;
-        border: 2px solid;
-        text-align: center;
-
-        &__inside {
-          text-decoration: none;
-          color: $light_blue;
-        }
+// 入力欄
+  .message {
+  background: #AAAAAA;
+}
+    p{
+      color:#434A5A;
     }
-  }
-
-  &__chat-contents {
-    padding: 46px 40px 40px;
-    height: calc(100% - 250px);
-    background-color: $white-smoke;
-
-    .chat-body {
-      padding-bottom: 40px;
-      margin-bottom: 40px;
-
-      &--name {
-        display: inline-block;
-        margin-bottom: 10px;
-        font-size: 16px;
-        font-weight: bold;
-        color: $letter-black;
-        float: left;
-      }
-
-      &--time {
-        display: inline-block;
-        margin-left: 10px;
-        font-size: 12px;
-        color: $time-color;
-        float: left;
-      }
-
-      &--message {
-        font-size: 14px;
-        color: $letter-black;
-        float: left;
-        clear: both;
-      }
-    }
-  }
-
-
-
-  &__footer {
-    padding: 20px 40px;
-    position: fixed;
-    bottom: 0;
-    width: calc(100vw - 380px);
-    height: 50px;
-    background-color: $light-gray;
-
-    &__message {
-      padding-left: 10px;
-      width: 890px;
-      height: 50px;
-      line-height: 50px;
-      color: $letter-black;
-      font-size: 16px;
-      border: none;
-      resize: none;
-      float: left;
-    }
-
-    &--file {
-      width: 30px;
-      height: 50px;
-      text-align: center;
-      line-height: 50px;
-      background-color: $button-white;
-      float: left;
-    }
-
-    &__submit-messages {
+    .form {
       display: inline-block;
-      padding-right: 30px;
-      padding-left: 30px;
-      line-height: 50px;
-      background-color: $light_blue;
-      font-size: 16px;
-      color: $button-white;
-      float: right;
     }
-  }
-}
+    .form__submit {
+      color:#FFFFFF;
+      background: #38AEF0;
+    }
