--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -24,7 +24,7 @@ body{
   box-sizing: border-box;
   float:left;
   display: block;
-
+}
   header {
       background: #253141;
       height:100px;
