--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,117 +1,277 @@
-body{
+body {
   width: 100%;
   height:100%;
   display: block;
 }
+
+.wrapper {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+}
+
+
+// お知らせバー
 .notification {
   background: #38AEF0;
   width:100%;
   margin:0;
   padding:0;
-  display: block;
-
-  .notice {
   color:#FFFFFF;
   text-align: center;
-  }
 }
 
+// 左側メニューバー
 .side-bar {
-  color:#FFFFFF;
-  width:300px;
   box-sizing: border-box;
-  float:left;
-  display: block;
+  width: 300px;
+  color:#FFFFFF;
 }
-  header {
-      background: #253141;
-      height:100px;
-      line-height:100px;
-      display: block;
-      padding: 0 20px;
-}
-  h3.user_name {
+
+header {
+  background-color: #253141;
+  height:100px;
+  line-height:100px;
+  padding: 0 20px;
+
+  h3 {
     font-size: 16px;
     font-weight: bold;
-    ådisplay: inline-block;
+    display: inline-block;
   }
-  ul {
-    list-style: none;
-  }
-  li {
-    text-align: -webkit-match-parent;
-  }
+}
 
 
-  .groups {
-    background: #2f3e51;
-    height:calc(100vh-100px);
-    padding:0 20px;
+ul.header__lists {
+  display: inline-block;
+  float:right;
+
+  li.list {
+    display: inline-block;
+    cursor: pointer;
   }
-  .group_name {
-    font-size: 15px;
-      p{
+
+}
+
+.groups {
+  background-color: #2f3e51;
+  height: calc( 100vh - 100px);
+  padding: 0 20px;
+
+  .group {
+    box-sizing: border-box;
+    padding: 20px 0 40px;
+    cursor: pointer;
+
+    a.title {
+      font-size: 15px;
+      display: block;
+    }
+    a.message {
       font-size: 11px;
     }
   }
+}
 
-.chat {
-  width: calc( 100vw - 300px);
-  float:right;
-    padding: 0 40px;
+// 右側表示欄
+.chat{
+  width: calc(100vw - 300px);
 
   header {
     box-sizing: border-box;
-      height: 100px;
-    p {
-      font-size: 20px;
-      color:#333333;
+    height: 100px;
+    padding: 0 40px;
+
+    .left-header {
+      float: left;
+
+      .left-header__title {
+        margin-top: 35px;
+        font-size: 20px;
+        color: #333333;
+      }
+      ul.left-header__members {
+        display: flex;
+        color: #999999;
+        font-size: 12px;
+        margin-top: 15px;
+      }
+      li.left-header__member {
+        display: inline-block;
+        padding-right: 5px;
+      }
+    }
+    .right-header {
+      border: 1px solid #38AEF0;
+      color: #38AEF0;
+      background: #FFFFFF;
+      line-height: 40px;
+      height: 40px;
+      margin-top: 28px;
+      padding: 0 20px;
+      float: right;
+
+      a.right-header__submit {
+        color: #38AEF0;
+        text-decoration: none;
+        cursor: pointer;
+      }
     }
   }
 }
+// chat欄ボーダー
 .border {
-  color: #eeeeee;
+  border: 1px solid #eeeeee;
+}
+// chat欄各メッセージ間隔
+.messages{
+  box-sizing: border-box;
+  height: calc(100vh - 100px - 90px);
+  overflow: scroll;
+  padding: 46px 40px 0;
+  background-color: #AAAAAA;
 }
 .chat.messages {
   box-sizing: border-box;
-    height: 100px;
-    padding: 0 40px;
-}
+  height: calc(100vh - 100px - 90px);
+  overflow: scroll;
+  padding: 46px 40px 0;
+  background-color: #AAAAAA;
 
-.user__name {
-  font-size:16px;
+}
+.message {
+  margin-bottom: 40px;
+}
+.message__user {
+  font-size: 16px;
   font-weight: bold;
   color:#434A54;
+  display: flex;
+  padding-right: 10px;
+  float: left;
 }
 
-
-.user__comment {
-  font-size: 14px;
-}
-
-
-.timestmp{
+.message__date {
   font-size: 12px;
   color:#999999;
 }
-
-    .edit__submit {
-      color: #38AEF0;
-      background: #FFFFFF;
-      height:40px;
-    }
-
-
-  .message {
-  background: #AAAAAA;
+.comment {
+  font-size: 14px;
+  margin-top: 10px;
+  color:#434A54;
 }
-    p{
-      color:#434A5A;
+.form{
+  height:90px;
+  box-sizing: border-box;
+  padding: 20px 50px 20px 40px;
+
+  .form__message.js-content{
+    border: none;
+    box-sizing: border-box;
+    float:left;
+    height: 50px;
+    padding: 0 10px;
+    width: calc(100% - 150px);
+    font-size: 16px;
+    color: #434A54;
+  }
+  .form__mask {
+    background-color: #FFFFFF;
+    float:left;
+    height: 50px;
+    padding-right: 10px;
+
+    label{
+      font-size: 20px;
+      line-height: 50px;
     }
-    .form {
-      display: inline-block;
-    }
-    .form__submit {
-      color:#FFFFFF;
-      background: #38AEF0;
-    }
+  }
+  .form__mask__image {
+    font-size: 20px;
+    line-height: 50px;
+  }
+  i {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    font-size: inherit;
+  }
+
+  .form__submit{
+    color: #FFFFFF;
+    background: #38AEF0;
+    border: none;
+    float: right;
+    font-size: 16px;
+    height: 50px;
+    margin-left:  15px;
+    padding : 0 30px;
+    float:right;
+  }
+}
+
+a:-webkit-any-link {
+
+}
+
+label {
+  cursor: default;
+}
+
+.fa-photo:before, .fa-image:before, .fa-picture-o:before {
+  content: "\f03e";
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
