--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -119,7 +119,7 @@ ul.header__lists {
   }
 }
 .border {
-  border: 1px solid #eeeeee;
+  border: 1px solid #FFFFFF;
 }
 .messages{
   box-sizing: border-box;
