--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,49 +1,62 @@
-!!!
-%html
-  %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title ChatSpaceSample
-    %meta{:content => "authenticity_token", :name => "csrf-param"}/
-    %meta{:content => "1Mu/nQxEbRFzgVvIs/tRxed/dSy3p1vqOluGTBgseapH7cVppn0sYhASp2jCPUz6S0393OYA5AK4eXjhpwBnFg==", :name => "csrf-token"}/
-    %link{"data-turbolinks-track" => "reload", :href => "/assets/application-20597f7122b97f433c4487edf7d6a0cfc9e951e2a661b8b0c7320b95bbd38ccd.css", :media => "all", :rel => "stylesheet"}/
-    %script{"data-turbolinks-track" => "reload", :src => "/assets/application-6b92f7bcf94deede5afc9ab209237e3423679aa989ffa2c7a102c62118315e23.js"}
-  %body
-    .flash-box
-    .wrapper
-      .chat-side
-        .side-header
-          .side-header__box
-            %p.side-header__box__user-name MMMM
-            %ul.side-header__box__menu
-              %li.side-header__box__menu__edit-user
-                %a{:href => "/groups/new"}
-                  %i.fa.fa-edit
-              %li.side-header__box__menu__new-group
-                %a{:href => "/users/41/edit"}
-                  %i.fa.fa-cog
-        .groups
-          %a{:href => "/groups/149/messages"}
-            .group
-              %p.group__group-name ascascasc
-              %p.group__latest-message まだメッセージがありません
-      .chat-main
-        .main-header
-          .main-header__left-box
-            %h2.main-header__left-box__current-group{"data-group_id" => "149"}
-              ascascasc
-            %ul.main-header__left-box__member-list
-              Member：
-              %li.main-header__left-box__member-list__member MMMM
-          %a{:href => "/groups/149/edit"}
-            .main-header__edit-btn Edit
-        .messages
-        .form
-          %form#new_message.new_message{"accept-charset" => "UTF-8", :action => "/groups/149/messages", :enctype => "multipart/form-data", :method => "post"}
-            %input{:name => "utf8", :type => "hidden", :value => "✓"}/
-            %input{:name => "authenticity_token", :type => "hidden", :value => "XFrntlz1/CSTSjY88O3jk3+7ALV3YLqMkRECcZXF1MwjBO1zl5UwDZghN7nAu+wmOGcro65UFeDRcD8lH8UgWQ=="}/
-            .input-box
-              %input#message_content.input-box__text{:name => "message[content]", :placeholder => "type a message", :type => "text"}/
-              %label.input-box__image{:for => "message_image"}
-                %i.fa.fa-image
-                %input#message_image.input-box__image__file{:name => "message[image]", :type => "file"}/
-            %input.submit-btn{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/
+
+
+
+
+
+
+.wrapper
+
+  = render 'shared/side_bar'
+
+  .chat
+    .header
+      .left-header
+        .left-header__title
+          グループ名
+        %ul.left-header__members
+          Member：
+          %li.member
+            メンバー名
+          %li.member
+            メンバー名
+          %li.member
+            メンバー名
+      .right-header
+        .right-header__button
+          Edit
+    .messages
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
+      .message
+        .upper-message
+          .upper-message__user-name
+            メンバー
+          .upper-message__date
+            2017/04/04
+        .lower-meesage
+          .lower-message__content
+            メッセージ
+    .form
+      %form
+        %input.form__message
+        .form__mask
+          %label.form__mask__image
+            = fa_icon 'picture-o', class: 'icon'
+            %input.hidden{type: 'file'}
+        %input.form__submit{type: 'submit', value: 'Send'}
