--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,5 +1,5 @@
 .account-page {
-  &__inner {
+  .account-page__inner {
     width: 980px;
     margin: 60px auto;
     padding: 60px;
@@ -7,11 +7,12 @@
     border: 1px solid #ddd;
     border-radius: 5px;
 
-    .account-page__inner--left{
+    .account-page__inner--left {
+
       float: left;
       width: 50%;
     }
-    .account-page__inner--right{
+    .account-page__inner--right {
       float: left;
       width: 50%;
     }
@@ -22,8 +23,8 @@
     }
   }
 
-  &__header {
-    h2 {
+  .account-page__header {
+    .account-page__header_h2 {
       margin-bottom: 10px;
       letter-spacing: 3px;
       font-size: 40px;
@@ -38,13 +39,13 @@
       }
     }
 
-    h5 {
+    .account-page__header_h5 {
       margin-bottom: 20px;
       font-size: 14px;
       font-weight: 200;
     }
 
-    .btn {
+    .account-page__btn {
       margin-top: 20px;
       color: #fff;
       background-color: #ccc;
@@ -52,10 +53,10 @@
     }
   }
 
-  .field {
+  .account-page__field {
     margin-bottom: 10px;
 
-    .field-label {
+    account-page__field--label {
       padding: 10px 0;
       letter-spacing: 1px;
       font-size: 14px;
@@ -66,7 +67,7 @@
       }
     }
 
-    .field-input {
+    account-page__field--input {
       input {
         width: 100%;
         padding: 10px;
@@ -75,7 +76,7 @@
     }
   }
 
-  .btn {
+  account-page__btn {
     display: inline-block;
     height: 50px;
     padding: 0 30px;
@@ -93,16 +94,16 @@
     background-color: #38aef0;
   }
 
-  .field-label {
-    &__with_errors {
+  .account-page__field-label {
+    .account-page__field-input--field_with_errors {
       display: inline-block;
       color: #d65f4c;
       font-weight: 400;
     }
   }
 
-  .field-input {
-    &__with_errors {
+  .account-page__field-input {
+    .account-page__field-input--field_with_errors {
       position: relative;
 
       &:after {
