--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -46,16 +46,14 @@
     }
   }
 
-  &__header {
     .btn {
       margin-top: 20px;
       color: #fff;
       background-color: #ccc;
       font-size: 14px;
     }
-  }
 
-  &__field {
+  .field {
     margin-bottom: 10px;
 
     .field-label {
@@ -96,16 +94,16 @@
     background-color: #38aef0;
   }
 
-  .field-label {
-    .field_with_errors {
+  &__field-label {
+    &--field_with_errors {
       display: inline-block;
       color: #d65f4c;
       font-weight: 400;
     }
   }
 
-  .field-input {
-    field_with_errors {
+  &__field-input {
+    &--field_with_errors {
       position: relative;
 
       &:after {
