--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -8,23 +8,23 @@
     .account-page__inner--right.user-form
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
-        .account-page__field
+        .account-page__inner__field
           .field-label
             = f.label :name
           .field-input
             = f.text_field :name, autofocus: true
-        .account-page__field
+        .account-page__inner__field
           .field-label
             = f.label :email
           .field-input
             = f.email_field :email
-        .account-page__field
+        .account-page__inner__field
           .field-label
             = f.label :password
             %i (英数字8文字以上)
           .field-input
             = f.password_field :password, autocomplete: "off"
-        .account-page__field
+        .account-page__inner__field
           .field-label
             = f.label :password_confirmation
           .field-input
