--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -56,7 +56,7 @@
   .field {
     margin-bottom: 10px;
 
-    .field-label {
+    &__field-label {
       padding: 10px 0;
       letter-spacing: 1px;
       font-size: 14px;
@@ -67,7 +67,7 @@
       }
     }
 
-    .field-input {
+    &__field-input {
       input {
         width: 100%;
         padding: 10px;
