--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,7 +1,7 @@
 .side-bar
   .header
     %h3.header__name
-      =current_user.name
+      = current_user.name
     %ul.header__lists
       %li.list
         = link_to do
@@ -12,16 +12,16 @@
   .groups
     .group
       .group__name
-        グループ名
+        グループ1
       .group__message
         新着メッセージ
     .group
       .group__name
-        グループ名
+        グループ2
       .group__message
         新着メッセージ
     .group
       .group__name
-        グループ名
+        グループ3
       .group__message
         新着メッセージ
