--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -10,42 +10,50 @@
         %ul.left-header__members
           Member：
           %li.member
-            メンバー名
+            メンバー名a
           %li.member
-            メンバー名
+            メンバー名b
           %li.member
-            メンバー名
+            メンバー名c
+
+
+
       .right-header
-        .right-header__button
-          Edit
+        %a.right-header__button
+        = link_to "Edit", "edit"
+
+        / = link_to 'Edit', edit_group_path(params[:group_id]), class: 'right-header__button'
+
+
+
     .messages
       .message
         .upper-message
           .upper-message__user-name
-            メンバー
+            メンバーa
           .upper-message__date
-            2017/04/04
+            2017/04/01
         .lower-meesage
           .lower-message__content
-            メッセージ
+            メッセージ1
       .message
         .upper-message
           .upper-message__user-name
-            メンバー
+            メンバーb
           .upper-message__date
-            2017/04/04
+            2017/04/02
         .lower-meesage
           .lower-message__content
-            メッセージ
+            メッセージ2
       .message
         .upper-message
           .upper-message__user-name
-            メンバー
+            メンバーc
           .upper-message__date
-            2017/04/04
+            2017/04/03
         .lower-meesage
           .lower-message__content
-            メッセージ
+            メッセージ3
     .form
       %form
         %input.form__message
