--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -17,43 +17,15 @@
             メンバー名c
 
 
-
       .right-header
         %a.right-header__button
         = link_to "Edit", "edit"
 
         / = link_to 'Edit', edit_group_path(params[:group_id]), class: 'right-header__button'
 
-
-
     .messages
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバーa
-          .upper-message__date
-            2017/04/01
-        .lower-meesage
-          .lower-message__content
-            メッセージ1
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバーb
-          .upper-message__date
-            2017/04/02
-        .lower-meesage
-          .lower-message__content
-            メッセージ2
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバーc
-          .upper-message__date
-            2017/04/03
-        .lower-meesage
-          .lower-message__content
-            メッセージ3
+      = render partial: 'message', collection: @messages
+
     .form
       %form
         %input.form__message
