--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -18,7 +18,7 @@
         = link_to "Edit", "edit"
 
     .messages
-      = render partial: 'message', collection: @messages
+      = render @messages
 
 
     .form
