--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -16,4 +16,5 @@
           .group__name
             = group.name
           .group__message
-            メッセージはまだありません。
+            / メッセージはまだありません。
+            = group.show_last_message
