--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -32,8 +32,13 @@
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
+            a {
+        text-decoration: none;
+        color: white;
+      }
       &__name {
         font-size: $side_group_name;
+        margin-top: 20px;
       }
       &__message {
         font-size: $side_group_message;
