--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -29,6 +29,8 @@
     background-color: $side_blue_light;
     height: calc(100vh - 100px);
     padding: 0 20px;
+    overflow: scroll;
+    position: relative;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
