--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -15,7 +15,7 @@
       = f.label :チャットメンバーを追加, class: 'chat-group-form__label'
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
-        %input{type: "text", placeholder: "追加したいユーザ名を入力してください", class: "chat-group-form__input", id: "user-search-field"}
+        %input#user-search-field.chat-group-form__input{ placeholder: "追加したいユーザー名を入力してください", type: "text" }
       .user-search-result
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
@@ -31,3 +31,6 @@
     .chat-group-form__field--left
     .chat-group-form__field--right
       = f.submit class: 'chat-group-form__action-btn'
+
+
+<%= text_field :page, :name, :class = 'page_name' %>
