--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -22,10 +22,11 @@
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
       .chat-group-users
-        .chat-group-user.clearfix
-          %p.chat-group-user__name
-            = current_user.name
-            = f.hidden_field :user_ids, value: current_user.id, name: 'group[user_ids][]'
+        - group.users.each do |user|
+          .chat-group-user.clearfix
+            %p.chat-group-user__name
+              = current_user.name
+              = f.hidden_field :user_ids, value: current_user.id, name: 'group[user_ids][]'
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
