--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -5,11 +5,12 @@
       %ul
         - group.errors.full_messages.each do |message|
           %li= message
-  .chat-group-form__field
+  .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :name, class: 'chat-group-form__label'
     .chat-group-form__field--right
       = f.text_field :name, class: 'chat__group_name chat-group-form__input', placeholder: 'グループ名を入力してください'
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       = f.label :チャットメンバーを追加, class: 'chat-group-form__label'
@@ -17,6 +18,7 @@
       .chat-group-form__search.clearfix
         %input#user-search-field.chat-group-form__input{ placeholder: "追加したいユーザー名を入力してください", type: "text" }
       .user-search-result
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
@@ -24,9 +26,12 @@
       .chat-group-users
         - group.users.each do |user|
           .chat-group-user.clearfix
+            / = f.hidden_field :user_ids, value: current_user.id, name: 'group[user_ids][]'
+            = f.hidden_field :member, name: 'group[user_ids][]', value: user.id
             %p.chat-group-user__name
               = user.name
-              = f.hidden_field :user_ids, value: current_user.id, name: 'group[user_ids][]'
+            - unless user.id == current_user.id
+              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
