--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -26,7 +26,8 @@
       .chat-group-users
         - group.users.each do |user|
           .chat-group-user.clearfix
-            = f.hidden_field :member, name: 'group[user_ids][]', value: user.id
+          / = f.hidden_field :user_ids, name: 'group[user_ids][]', value: current_user.id,
+            = f.hidden_field :user_ids, name: 'group[user_ids][]', value: user.id
             %p.chat-group-user__name
               = user.name
             - unless user.id == current_user.id
