--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -13,17 +13,17 @@
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      = f.label :チャットメンバーを追加, class: 'chat-group-form__label'
+      %label.chat-group-form__label{ for: "chat_group_チャットメンバーを追加" } チャットメンバーを追加
     .chat-group-form__field--right
       .chat-group-form__search.clearfix
         %input#user-search-field.chat-group-form__input{ placeholder: "追加したいユーザー名を入力してください", type: "text" }
-      .user-search-result
+      #user-search-result
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
-      %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} チャットメンバー
+      %label.chat-group-form__label{ for: "chat_group_チャットメンバー" } チャットメンバー
     .chat-group-form__field--right
-      .chat-group-users
+      #chat-group-users
         - group.users.each do |user|
           .chat-group-user.clearfix
             = f.hidden_field :user_ids, name: 'group[user_ids][]', value: user.id
